--- a/deployments/localtest/docker-compose.yaml
+++ b/deployments/localtest/docker-compose.yaml
@@ -2,7 +2,9 @@
 version: "2.1"
 services:
   yelb-ui:
-    image: mreferre/yelb-ui:0.10
+    #image: mreferre/yelb-ui:0.10
+    #image: ui-local:latest
+    build: ../../yelb-ui
     depends_on:
       - yelb-appserver
     ports:
@@ -11,7 +13,8 @@ services:
       - UI_ENV=test # dev | test | prod 
 
   yelb-appserver:
-    image: mreferre/yelb-appserver:0.7
+    #image: mreferre/yelb-appserver:0.7
+    build: ../../yelb-appserver
     depends_on:
       - redis-server
       - yelb-db
@@ -26,6 +29,7 @@ services:
       - 6379:6379
 
   yelb-db:
-    image: mreferre/yelb-db:0.6
+    #image: mreferre/yelb-db:0.6
+    build: ../../yelb-db
     ports:
       - 5432:5432
